stack-sets/09-vpc/vpc.template.yaml
{% from 'defaults.template.yaml' import SubnetIdentifiers, AvailabilityZones %}

# Based on the Cloudonaut VPC Template

AWSTemplateFormatVersion: '2010-09-09'
Description: 'VPC with public and private subnets in {{ AvailabilityZones }} Availability Zone'
Parameters:
  ClassB:
    Description: 'Class B of VPC (10.XXX.0.0/16)'
    Type: Number
    Default: 0
    ConstraintDescription: 'Must be in the range [0-255]'
    MinValue: 0
    MaxValue: 255
  PrivateNatGateway:
    Description: 'Setting for creating Private Nat Gateways'
    Type: String
    Default: none
    AllowedValues: ["none", "single", "all"]
  ExportsPrefix:
    Type: String
    Default: 'vpc'
  AttachVPN:
    Type: String
    Default: 'false'
    AllowedValues: ["true", "false"]
  VPNCidr:
    Type: String
    Default: '10.245.0.0/24'
  VPNGateway:
    Type: String
    Default: DefaultGateway
  PeerVPCId:
    Type: String
    Default: 'none'
  PeerVPCOwner:
    Type: String
    Default: 'none'
  PeerVPCRegion:
    Type: String
    Default: 'none'
  PeerVPCCidr:
    Type: String
    Default: '192.168.0.0/24'
Conditions:
  SingleNatGateway: !Equals ['single', !Ref PrivateNatGateway]
  AllNatGateways: !Equals ['all', !Ref PrivateNatGateway]
  AttachVPN: !Equals ['true', !Ref AttachVPN]
  EnableVPCPeering:
    Fn::Not: [!Equals [!Ref PeerVPCId, 'none']]
  HasVPCPeeringOwner:
    Fn::Not: [!Equals [!Ref PeerVPCOwner, 'none']]
  HasVPCPeeringRegion:
    Fn::Not: [!Equals [!Ref PeerVPCRegion, 'none']]

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Sub '10.${ClassB}.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Sub '10.${ClassB}.0.0/16'
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
      - Key: Name
        Value: !Sub '10.${ClassB}.0.0/16'

  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  VPNGatewayAttachment:
    Condition: AttachVPN
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      VpnGatewayId:
        Fn::ImportValue: !Ref VPNGateway

  {% for Identifier in SubnetIdentifiers %}
  Subnet{{ Identifier }}Private:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [{{loop.index - 1}}, !GetAZs '']
      CidrBlock: !Sub '10.${ClassB}.{{(loop.index - 1)*32}}.0/20'
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub ${VPC}-'{{ Identifier }}-Private'
      - Key: Reach
        Value: Private
  Subnet{{ Identifier }}Public:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [{{loop.index - 1}}, !GetAZs '']
      CidrBlock: !Sub '10.${ClassB}.{{(loop.index - 1)*32+16}}.0/20'
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub ${VPC}-'{{ Identifier }}-Public'
      - Key: Reach
        Value: Public

  RouteTable{{ Identifier }}Public:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${VPC.CidrBlock}-Public{{ Identifier }}
  RouteTable{{ Identifier }}Private:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${VPC.CidrBlock}-Private{{ Identifier }}

  RouteTableAssociation{{ Identifier }}Public:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet{{ Identifier }}Public
      RouteTableId: !Ref RouteTable{{ Identifier }}Public

  RouteTableAssociation{{ Identifier }}Private:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref Subnet{{ Identifier }}Private
      RouteTableId: !Ref RouteTable{{ Identifier }}Private

  RouteTableInternetRoute{{ Identifier }}Public:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable{{ Identifier }}Public
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  RouteTableVPNRoute{{ Identifier }}Private:
    Condition: AttachVPN
    Type: 'AWS::EC2::Route'
    DependsOn: VPNGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable{{ Identifier }}Private
      DestinationCidrBlock: !Ref VPNCidr
      GatewayId:
        Fn::ImportValue: !Ref VPNGateway

  RouteTableVPNRoute{{ Identifier }}Public:
    Condition: AttachVPN
    Type: 'AWS::EC2::Route'
    DependsOn: VPNGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable{{ Identifier }}Public
      DestinationCidrBlock: !Ref VPNCidr
      GatewayId:
        Fn::ImportValue: !Ref VPNGateway

  RouteTableVPCPeerRoute{{ Identifier }}Private:
    Condition: EnableVPCPeering
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTable{{ Identifier }}Private
      DestinationCidrBlock: !Ref PeerVPCCidr
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  RouteTableVPCPeerRoute{{ Identifier }}Public:
    Condition: EnableVPCPeering
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTable{{ Identifier }}Public
      DestinationCidrBlock: !Ref PeerVPCCidr
      VpcPeeringConnectionId: !Ref VPCPeeringConnection

  SubnetNetworkAclAssociation{{ Identifier }}Public:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref Subnet{{ Identifier }}Public
      NetworkAclId: !Ref NetworkAclPublic

  SubnetNetworkAclAssociation{{ Identifier }}Private:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref Subnet{{ Identifier }}Private
      NetworkAclId: !Ref NetworkAclPrivate

  NatGateway{{ Identifier }}ElasticIp:
    Condition: AllNatGateways
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
  NatGateway{{ Identifier }}:
    Condition: AllNatGateways
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'NatGateway{{ Identifier }}ElasticIp.AllocationId'
      SubnetId: !Ref Subnet{{ Identifier }}Public
  NatGateway{{ Identifier }}Route:
    Condition: AllNatGateways
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTable{{ Identifier }}Private
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref NatGateway{{ Identifier }}
  SingleNatGateway{{ Identifier }}Route:
    Condition: SingleNatGateway
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTable{{ Identifier }}Private
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref SingleNatGateway
  {% endfor %}

  SingleNatGatewayElasticIp:
    Condition: SingleNatGateway
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  SingleNatGateway:
    Condition: SingleNatGateway
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'SingleNatGatewayElasticIp.AllocationId'
      SubnetId: !Ref Subnet{{ SubnetIdentifiers[0] }}Public

  NetworkAclPublic:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Public

  NetworkAclPrivate:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private

  NetworkAclEntryInPublicAllowAll:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'

  NetworkAclEntryOutPublicAllowAll:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPublic
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'

  NetworkAclEntryInPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: '0.0.0.0/0'

  NetworkAclEntryOutPrivateAllowVPC:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref NetworkAclPrivate
      RuleNumber: 99
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: '0.0.0.0/0'

  VPCPeeringConnection:
    Condition: EnableVPCPeering
    Type: AWS::EC2::VPCPeeringConnection
    Properties:
      VpcId: !Ref VPC
      PeerVpcId:
        Ref: PeerVPCId
      PeerOwnerId:
        Fn::If:
          - HasVPCPeeringOwner
          - !Ref PeerVPCOwner
          - !Ref AWS::NoValue
      PeerRegion:
        Fn::If:
          - HasVPCPeeringRegion
          - !Ref PeerVPCRegion
          - !Ref AWS::NoValue
      PeerRoleArn:
        Fn::If:
          - HasVPCPeeringOwner
          - !Sub arn:aws:iam::${PeerVPCOwner}:role/VPCPeeringRole${AWS::AccountId}
          - !Ref AWS::NoValue

Outputs:
  StackName:
    Description: 'Stack name'
    Value: !Sub '${AWS::StackName}'
  AZs:
    Description: 'AZs'
    Value: {{ AvailabilityZones }}
    Export:
      Name: !Sub '${ExportsPrefix}:AZs'
  AvailabilityZones:
    Description: 'AZs'
    Value: !Join [',', !GetAZs '']
  ClassB:
    Description: 'Class B.'
    Value: !Ref ClassB
    Export:
      Name: !Sub '${ExportsPrefix}:ClassB'
  VPC:
    Description: 'VPC.'
    Value: !Ref VPC
    Export:
      Name: !Sub '${ExportsPrefix}:VPC'
  SubnetsPublic:
    Description: 'Subnets public.'
    Value:
      Fn::Join:
        - ','
        - {% for Identifier in SubnetIdentifiers%}
          - !Ref Subnet{{ Identifier }}Public
        {% endfor %}
    Export:
      Name: !Sub '${ExportsPrefix}:SubnetsPublic'
  SubnetsPrivate:
    Description: 'Subnets private.'
    Value:
      Fn::Join:
        - ','
        - {% for Identifier in SubnetIdentifiers%}
          - !Ref Subnet{{ Identifier }}Private
        {% endfor %}
    Export:
      Name: !Sub '${ExportsPrefix}:SubnetsPrivate'
  RouteTablesPrivate:
    Description: 'Route tables private.'
    Value:
      Fn::Join:
        - ','
        - {% for Identifier in SubnetIdentifiers%}
          - !Ref RouteTable{{ Identifier }}Private
        {% endfor %}
    Export:
      Name: !Sub '${ExportsPrefix}:RouteTablesPrivate'
  RouteTablesPublic:
    Description: 'Route tables public.'
    Value:
      Fn::Join:
        - ','
        - {% for Identifier in SubnetIdentifiers%}
          - !Ref RouteTable{{ Identifier }}Public
          {% endfor %}
    Export:
      Name: !Sub '${ExportsPrefix}:RouteTablesPublic'
  {% for Identifier in SubnetIdentifiers%}
  AZ{{ Identifier }}:
    Description: 'AZ of {{ Identifier }}'
    Value: !Select [{{loop.index - 1}}, !GetAZs '']
    Export:
      Name: !Sub '${ExportsPrefix}:AZ{{ Identifier }}'
  Subnet{{ Identifier }}Public:
    Description: 'Subnet {{ Identifier }} public.'
    Value: !Ref Subnet{{ Identifier }}Public
    Export:
      Name: !Sub '${ExportsPrefix}:Subnet{{ Identifier }}Public'
  RouteTable{{ Identifier }}Public:
    Description: 'Route table A public.'
    Value: !Ref RouteTable{{ Identifier }}Public
    Export:
      Name: !Sub '${ExportsPrefix}:RouteTable{{ Identifier }}Public'
  Subnet{{ Identifier }}Private:
    Description: 'Subnet {{ Identifier }} private.'
    Value: !Ref Subnet{{ Identifier }}Private
    Export:
      Name: !Sub '${ExportsPrefix}:Subnet{{ Identifier }}Private'
  RouteTable{{ Identifier }}Private:
    Description: 'Route table {{ Identifier }} private.'
    Value: !Ref RouteTable{{ Identifier }}Private
    Export:
      Name: !Sub '${ExportsPrefix}:RouteTable{{ Identifier }}Private'
  {% endfor %}
